Add laotelecome page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,10 @@
     </ion-navbar>
 
 	<ion-card>
-	  <img src="assets/images/laotelecom.jpg"/>
+    <button (click)="laotelecom($event)" >
+      <img src="assets/images/laotelecom.jpg"/>
+    </button>
+
 	  <div class="card-title">Lao telecom</div>
 	</ion-card>
 	<ion-card>
