Add etl page, change all page title to lao language and remove SIM module from project

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="navcolor">
-    <ion-title>Histories</ion-title>
+    <ion-title>ປະຫວັດເຕີມເງີນ</ion-title>
     <ion-buttons end>
       <button ion-button icon-only color="dark" (click)="closeHistoryPage()">
         <ion-icon name="close"></ion-icon>
