Refix home page to ok

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,17 +30,9 @@
       </ion-buttons>
     </ion-navbar>
 
-	<ion-card>
-<<<<<<< HEAD
-    <button (click)="laotelecom($event)" >
-      <img src="assets/images/laotelecom.jpg"/>
-    </button>
-
-	  <div class="card-title">Lao telecom</div>
-=======
+	<ion-card (click)="openLaotelecomService()">
 	  <img src="assets/images/laotelecom.jpg"/>
 	  <div class="card-title">ອິນເຕີເນັດລາວໂທລະຄົມ</div>
->>>>>>> Add etl page, change all page title to lao language and remove SIM module from project
 	</ion-card>
 	<ion-card  (click)="openETLServices()">
 	  <img src="assets/images/etl.jpg"/>
