Add color to nav bar on laotelecom page and beeline page

--- a/src/pages/laotelecom/laotelecom.html
+++ b/src/pages/laotelecom/laotelecom.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title color="navcolor">laotelecom</ion-title>
+  <ion-navbar color="navcolor">
+    <ion-title>laotelecom</ion-title>
   </ion-navbar>
 
 </ion-header>
