--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,7 +42,7 @@
 	  <img src="assets/images/unitel.jpg"/>
 	  <div class="card-title">ອິນເຕີເນັດຢູນີເທວ</div>
 	</ion-card>
-	<ion-card>
+	<ion-card (click)="openBeelineServices()">
 	  <img src="assets/images/beeline.jpg"/>
 	  <div class="card-title">ອິນເຕີເນັດບີລາຍ</div>
 	</ion-card>
