--- a/src/pages/laotelecom/laotelecom.html
+++ b/src/pages/laotelecom/laotelecom.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
-{{title}}
-  <button ion-button (click)="SayHello()">Click</button>
+  <ion-list>
+    <ion-item>
+
+    </ion-item>
+  </ion-list>
 </ion-content>
