--- a/src/pages/laotelecom/laotelecom.html
+++ b/src/pages/laotelecom/laotelecom.html
@@ -7,16 +7,47 @@
 <ion-header>
 
   <ion-navbar color="navcolor">
-    <ion-title>laotelecom</ion-title>
+    <ion-title>ອີນເຕີເນັດລາວໂທລະຄົມ</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <!--Refresher-->
+  <ion-refresher (ionRefresh)="refreshPage($event)">
+    <ion-refresher-content
+      pullingIcon="ios-arrow-down"
+    ></ion-refresher-content>
+  </ion-refresher>
+
+  <h1 text-center><b>ຊິມເນັດ</b></h1>
+
+
+
   <ion-list>
     <ion-item>
-
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ GB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
+    <ion-item (click)="RegisterSimPagekage('5')">
+      <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>1GB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterSimPagekage('10')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>1.5GB</ion-label><ion-label text-right>7 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterSimPagekage('6')">
+      <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>5GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterSimPagekage('11')">
+      <ion-label text-left>150,000ກິບ</ion-label><ion-label text-center>15GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterSimPagekage('12')">
+      <ion-label text-left>250,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
   </ion-list>
 </ion-content>
