--- a/src/pages/laotelecom/laotelecom.html
+++ b/src/pages/laotelecom/laotelecom.html
@@ -7,9 +7,13 @@
 <ion-header>
 
   <ion-navbar color="navcolor">
-    <ion-title>ອີນເຕີເນັດລາວໂທລະຄົມ</ion-title>
+    <ion-title>ລາວໂທລະຄົມ</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="secondary" (click)="CallCenter()">
+        <ion-icon name="call"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
@@ -24,65 +28,94 @@
   <!--this is Net sim-->
   <h1 text-center><b>ຊິມເນັດ</b></h1>
 
-
-
   <ion-list>
     <ion-item>
       <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ GB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
-    <ion-item (click)="RegisterNetSimPagekage('5')">
+    <ion-item (click)="RegisterNetSimPackage('5')">
       <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>1GB</ion-label><ion-label text-right>1 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('10')">
+    <ion-item (click)="RegisterNetSimPackage('10')">
       <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>1.5GB</ion-label><ion-label text-right>7 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('6')">
+    <ion-item (click)="RegisterNetSimPackage('6')">
       <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>5GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('11')">
+    <ion-item (click)="RegisterNetSimPackage('11')">
       <ion-label text-left>150,000ກິບ</ion-label><ion-label text-center>15GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('12')">
+    <ion-item (click)="RegisterNetSimPackage('12')">
       <ion-label text-left>250,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('13')">
+    <ion-item (click)="RegisterNetSimPackage('13')">
       <ion-label text-left>700,000ກິບ</ion-label><ion-label text-center>93GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('14')">
+    <ion-item (click)="RegisterNetSimPackage('14')">
       <ion-label text-left>1500,000ກິບ</ion-label><ion-label text-center>189GB</ion-label><ion-label text-right>180 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterNetSimPagekage('15')">
+    <ion-item (click)="RegisterNetSimPackage('15')">
       <ion-label text-left>3000,000ກິບ</ion-label><ion-label text-center>390GB</ion-label><ion-label text-right>365 ວັນ</ion-label>
     </ion-item>
-
-
   </ion-list>
 
    <!--Call sim-->
   <h1 text-center=""><b>ເບີເຕີມເງີນ</b></h1>
   <ion-list>
+    <ion-item>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ GB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('5')">
+      <ion-label text-left>100ກິບ</ion-label><ion-label text-center>25MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
 
     <ion-item (click)="RegisterCallSimPackage('1')">
-      <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+      <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>125MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterCallSimPackage()">
-      <ion-label text-left>250,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    <ion-item (click)="RegisterCallSimPackage('2')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>250MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterCallSimPackage()">
-      <ion-label text-left>250,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    <ion-item (click)="RegisterCallSimPackage('3')">
+      <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>1.25GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterCallSimPackage()">
-      <ion-label text-left>250,000ກິບ</ion-label><ion-label text-center>30GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    <ion-item (click)="RegisterCallSimPackage('4')">
+      <ion-label text-left>100,000ກິບ</ion-label><ion-label text-center>2.5GB</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </ion-item>
   </ion-list>
+
+  <!--Monthly sim-->
+  <h1 text-center><b>ເບີລາຍເດືອນ</b></h1>
+  <ion-list>
+    <ion-item>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ GB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterMonthlySimPackage('1')">
+      <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>1.25GB</ion-label><ion-label text-right>ບໍຈໍກັດ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterMonthlySimPackage('2')">
+      <ion-label text-left>150,000ກິບ</ion-label><ion-label text-center>3.75GB</ion-label><ion-label text-right>ບໍຈໍກັດ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterMonthlySimPackage('4')">
+      <ion-label text-left>500,000ກິບ</ion-label><ion-label text-center>12.5GB</ion-label><ion-label text-right>ບໍຈໍກັດ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterMonthlySimPackage('5')">
+      <ion-label text-left>800,000ກິບ</ion-label><ion-label text-center>20GB</ion-label><ion-label text-right>ບໍຈໍກັດ</ion-label>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
