finished unitel page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
 	  <img src="assets/images/etl.jpg"/>
 	  <div class="card-title">ອິນເຕີເນັດອີທີແອລ໌</div>
 	</ion-card>
-	<ion-card>
+	<ion-card (click)="openUnitelService()">
 	  <img src="assets/images/unitel.jpg"/>
 	  <div class="card-title">ອິນເຕີເນັດຢູນີເທວ</div>
 	</ion-card>
