--- a/src/pages/unitel/unitel.html
+++ b/src/pages/unitel/unitel.html
@@ -6,13 +6,102 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>unitel</ion-title>
+  <ion-navbar color="navcolor">
+    <ion-title>ຢູນີເທວ</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="secondary" (click)="CallCenter()">
+        <ion-icon name="call"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <!--Refresher-->
+  <ion-refresher (ionRefresh)="refreshPage($event)">
+    <ion-refresher-content
+      pullingIcon="ios-arrow-down"
+    ></ion-refresher-content>
+  </ion-refresher>
+
+  <!--this is Net sim-->
+  <h1 text-center><b>ຊິມເນັດ</b></h1>
+
+  <ion-list>
+    <ion-item>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+    </ion-item>
+    <ion-item (click)="RegisterNetSimPackage('21')">
+      <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>1,024MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('22')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-right>5 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('23')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>1,500MB</ion-label><ion-label text-right>7 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('33')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>4,000MB</ion-label><ion-label text-right>3 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('24')">
+      <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>5,120MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('25')">
+      <ion-label text-left>120,000ກິບ</ion-label><ion-label text-center>12,288MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('32')">
+      <ion-label text-left>200,000ກິບ</ion-label><ion-label text-center>30,000MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterNetSimPackage('28')">
+      <ion-label text-left>300,000ກິບ</ion-label><ion-label text-center>Non-Stop</ion-label><ion-label text-right>ໂຂ ວັນ</ion-label>
+    </ion-item>
+  </ion-list>
+
+
+
+  <!--Call sim-->
+  <h1 text-center=""><b>ເບີເຕີມເງີນ</b></h1>
+  <ion-list>
+    <ion-item>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('1')">
+      <ion-label text-left>1000ກິບ</ion-label><ion-label text-center>25MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('2')">
+      <ion-label text-left>2,000ກິບ</ion-label><ion-label text-center>60MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('3')">
+      <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>125MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('4')">
+      <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>270MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('7')">
+      <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>1.536MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('8')">
+      <ion-label text-left>100,000ກິບ</ion-label><ion-label text-center>3,072MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+
+    <ion-item (click)="RegisterCallSimPackage('9')">
+      <ion-label text-left>120,000ກິບ</ion-label><ion-label text-center>4,096MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
