--- a/src/pages/beeline/beeline.html
+++ b/src/pages/beeline/beeline.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="navcolor">
     <ion-title>ອິນເຕີເນັດບີລາຍ</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="secondary" (click)="CallCenter()">
+        <ion-icon name="call"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
