Edit pages call dialog and title

--- a/src/pages/beeline/beeline.html
+++ b/src/pages/beeline/beeline.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="navcolor">
-    <ion-title>ອິນເຕີເນັດບີລາຍ</ion-title>
+    <ion-title>ບີລາຍ</ion-title>
     <ion-buttons end>
       <button ion-button icon-only color="secondary" (click)="CallCenter()">
         <ion-icon name="call"></ion-icon>
