--- a/src/pages/etl/etl.html
+++ b/src/pages/etl/etl.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="navcolor">
-    <ion-title>ອິນເຕີເນັດອີທີແອລ໌</ion-title>
+    <ion-title>ອີທີແອລ໌</ion-title>
     <ion-buttons end>
       <button ion-button icon-only color="secondary" (click)="CallCenter()">
         <ion-icon name="call"></ion-icon>
