--- a/src/pages/beeline/beeline.html
+++ b/src/pages/beeline/beeline.html
@@ -28,47 +28,47 @@
   <h1 text-center><b>ຊິມເນັດ</b></h1>
   <ion-list>
     <ion-item>
-      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນເມັກ</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
-    <ion-item (click)="registerSimPackage('N5')">
-      <ion-label text-left>5000ກີບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-end>1ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('BD1')">
-      <ion-label text-left>5000ກີບ</ion-label><ion-label text-center>1,200MB</ion-label><ion-label text-end>1ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('N10')">
-      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>3,000MB</ion-label><ion-label text-end>7ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('N50')">
-      <ion-label text-left>50,000ກີບ</ion-label><ion-label text-center>10,000MB</ion-label><ion-label text-end>30ວັນ</ion-label>
-    </ion-item>
+    <button ion-item (click)="registerSimPackage('N5')">
+      <ion-label text-left>5,000ກີບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-end>1 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('BD1')">
+      <ion-label text-left>5,000ກີບ</ion-label><ion-label text-center>1,200MB</ion-label><ion-label text-end>1 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('N10')">
+      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>3,000MB</ion-label><ion-label text-end>7 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('N50')">
+      <ion-label text-left>50,000ກີບ</ion-label><ion-label text-center>10,000MB</ion-label><ion-label text-end>30 ວັນ</ion-label>
+    </button>
   </ion-list>
 
   <h1 text-center><b>ຊິມໂທ</b></h1>
   <ion-list>
     <ion-item>
-      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນເມັກ</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
+      <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
-    <ion-item (click)="registerSimPackage('DS')">
-      <ion-label text-left>1000ກີບ</ion-label><ion-label text-center>50MB</ion-label><ion-label text-end>1ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('D3')">
-      <ion-label text-left>6000ກີບ</ion-label><ion-label text-center>200MB</ion-label><ion-label text-end>3ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('W10')">
-      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>500MB</ion-label><ion-label text-end>7ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('S')">
-      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>300MB</ion-label><ion-label text-end>30ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('M')">
-      <ion-label text-left>50,000ກີບ</ion-label><ion-label text-center>1,500MB</ion-label><ion-label text-end>30ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('M3')">
-      <ion-label text-left>80,000ກີບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-end>30ວັນ</ion-label>
-    </ion-item>
-    <ion-item (click)="registerSimPackage('L')">
-      <ion-label text-left>100,000ກີບ</ion-label><ion-label text-center>3,000MB</ion-label><ion-label text-end>30ວັນ</ion-label>
-    </ion-item>
+    <button ion-item (click)="registerSimPackage('DS')">
+      <ion-label text-left>1,000ກີບ</ion-label><ion-label text-center>50MB</ion-label><ion-label text-end>1 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('D3')">
+      <ion-label text-left>6,000ກີບ</ion-label><ion-label text-center>200MB</ion-label><ion-label text-end>3 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('W10')">
+      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>500MB</ion-label><ion-label text-end>7 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('S')">
+      <ion-label text-left>10,000ກີບ</ion-label><ion-label text-center>300MB</ion-label><ion-label text-end>30 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('M')">
+      <ion-label text-left>50,000ກີບ</ion-label><ion-label text-center>1,500MB</ion-label><ion-label text-end>30 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('M3')">
+      <ion-label text-left>80,000ກີບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-end>30 ວັນ</ion-label>
+    </button>
+    <button ion-item (click)="registerSimPackage('L')">
+      <ion-label text-left>100,000ກີບ</ion-label><ion-label text-center>3,000MB</ion-label><ion-label text-end>30 ວັນ</ion-label>
+    </button>
   </ion-list>
 </ion-content>
