--- a/src/pages/unitel/unitel.html
+++ b/src/pages/unitel/unitel.html
@@ -33,37 +33,37 @@
     <ion-item>
       <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
-    <ion-item (click)="RegisterNetSimPackage('21')">
+    <button ion-item (click)="RegisterNetSimPackage('21')">
       <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>1,024MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('22')">
+    <button ion-item (click)="RegisterNetSimPackage('22')">
       <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>2,000MB</ion-label><ion-label text-right>5 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('23')">
+    <button ion-item (click)="RegisterNetSimPackage('23')">
       <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>1,500MB</ion-label><ion-label text-right>7 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('33')">
+    <button ion-item (click)="RegisterNetSimPackage('33')">
       <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>4,000MB</ion-label><ion-label text-right>3 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('24')">
+    <button ion-item (click)="RegisterNetSimPackage('24')">
       <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>5,120MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('25')">
+    <button ion-item (click)="RegisterNetSimPackage('25')">
       <ion-label text-left>120,000ກິບ</ion-label><ion-label text-center>12,288MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('32')">
+    <button ion-item (click)="RegisterNetSimPackage('32')">
       <ion-label text-left>200,000ກິບ</ion-label><ion-label text-center>30,000MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterNetSimPackage('28')">
+    <button ion-item (click)="RegisterNetSimPackage('28')">
       <ion-label text-left>300,000ກິບ</ion-label><ion-label text-center>Non-Stop</ion-label><ion-label text-right>ໂຂ ວັນ</ion-label>
-    </ion-item>
+    </button>
   </ion-list>
 
 
@@ -75,33 +75,33 @@
       <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-right><b>ອາຍຸໃຊ້ງານ</b></ion-label>
     </ion-item>
 
-    <ion-item (click)="RegisterCallSimPackage('1')">
-      <ion-label text-left>1000ກິບ</ion-label><ion-label text-center>25MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
-    </ion-item>
+    <button ion-item (click)="RegisterCallSimPackage('1')">
+      <ion-label text-left>1,000ກິບ</ion-label><ion-label text-center>25MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('2')">
+    <button ion-item (click)="RegisterCallSimPackage('2')">
       <ion-label text-left>2,000ກິບ</ion-label><ion-label text-center>60MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('3')">
+    <button ion-item (click)="RegisterCallSimPackage('3')">
       <ion-label text-left>5,000ກິບ</ion-label><ion-label text-center>125MB</ion-label><ion-label text-right>1 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('4')">
+    <button ion-item (click)="RegisterCallSimPackage('4')">
       <ion-label text-left>10,000ກິບ</ion-label><ion-label text-center>270MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('7')">
+    <button ion-item (click)="RegisterCallSimPackage('7')">
       <ion-label text-left>50,000ກິບ</ion-label><ion-label text-center>1.536MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('8')">
+    <button ion-item (click)="RegisterCallSimPackage('8')">
       <ion-label text-left>100,000ກິບ</ion-label><ion-label text-center>3,072MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
 
-    <ion-item (click)="RegisterCallSimPackage('9')">
+    <button ion-item (click)="RegisterCallSimPackage('9')">
       <ion-label text-left>120,000ກິບ</ion-label><ion-label text-center>4,096MB</ion-label><ion-label text-right>30 ວັນ</ion-label>
-    </ion-item>
+    </button>
   </ion-list>
 
 </ion-content>
