--- a/src/pages/beeline/beeline.html
+++ b/src/pages/beeline/beeline.html
@@ -25,7 +25,7 @@
     ></ion-refresher-content>
   </ion-refresher>
 
-  <h1 text-center><b>ຊິມເນັດ</b></h1>
+  <h1 text-center><b>ເບີເນັດ</b></h1>
   <ion-list>
     <ion-item>
       <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
@@ -44,7 +44,7 @@
     </button>
   </ion-list>
 
-  <h1 text-center><b>ຊິມໂທ</b></h1>
+  <h1 text-center><b>ເບີໂທ</b></h1>
   <ion-list>
     <ion-item>
       <ion-label text-left><b>ຄ່າສະໝັກ</b></ion-label><ion-label text-center><b>ຈຳນວນ MB</b></ion-label><ion-label text-end><b>ອາຍຸໃຊ້ງານ</b></ion-label>
