--- a/src/pages/unitel/unitel.html
+++ b/src/pages/unitel/unitel.html
@@ -27,7 +27,7 @@
   </ion-refresher>
 
   <!--this is Net sim-->
-  <h1 text-center><b>ຊິມເນັດ</b></h1>
+  <h1 text-center><b>ເບີເນັດ</b></h1>
 
   <ion-list>
     <ion-item>
@@ -62,7 +62,7 @@
     </button>
 
     <button ion-item (click)="RegisterNetSimPackage('28')">
-      <ion-label text-left>300,000ກິບ</ion-label><ion-label text-center>Non-Stop</ion-label><ion-label text-right>ໂຂ ວັນ</ion-label>
+      <ion-label text-left>300,000ກິບ</ion-label><ion-label text-center>Non-Stop</ion-label><ion-label text-right>30 ວັນ</ion-label>
     </button>
   </ion-list>
 
