--- a/src/pages/laotelecom/laotelecom.html
+++ b/src/pages/laotelecom/laotelecom.html
@@ -26,7 +26,7 @@
   </ion-refresher>
 
   <!--this is Net sim-->
-  <h1 text-center><b>ຊິມເນັດ</b></h1>
+  <h1 text-center><b>ເບີເນັດ</b></h1>
 
   <ion-list>
     <ion-item>
@@ -57,11 +57,11 @@
     </button>
 
     <button ion-item (click)="RegisterNetSimPackage('14')">
-      <ion-label text-left>1500,000ກິບ</ion-label><ion-label text-center>189GB</ion-label><ion-label text-right>180 ວັນ</ion-label>
+      <ion-label text-left>1,500,000ກິບ</ion-label><ion-label text-center>189GB</ion-label><ion-label text-right>180 ວັນ</ion-label>
     </button>
 
     <button ion-item (click)="RegisterNetSimPackage('15')">
-      <ion-label text-left>3000,000ກິບ</ion-label><ion-label text-center>390GB</ion-label><ion-label text-right>365 ວັນ</ion-label>
+      <ion-label text-left>3,000,000ກິບ</ion-label><ion-label text-center>390GB</ion-label><ion-label text-right>365 ວັນ</ion-label>
     </button>
   </ion-list>
 
